--- a/requirements.local.txt
+++ b/requirements.local.txt
@@ -2,3 +2,4 @@ Django>=3.2.4,<3.3
 djangorestframework>=3.12.4,<3.13
 psycopg2-binary>=2.9.5,<2.10
 drf-spectacular>=0.15.1,<0.16
+drf-nested-routers>=0.93.4,<0.94
