--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - "8000:8000"
     volumes:
       - ./app:/app
+      - dev-static-data:/vol/web
     command: >
       sh -c "python manage.py wait_for_db &&
              python manage.py migrate &&
@@ -22,7 +23,7 @@ services:
       - DB_USER=devuser
       - DB_PASS=changeme
 
-  db: 
+  db:
     image: postgres:13-alpine
     volumes:
       - dev-db-data:/var/lib/postgresql/data
@@ -33,3 +34,4 @@ services:
 
 volumes:
   dev-db-data:
+  dev-static-data:
