--- a/requirements.local.txt
+++ b/requirements.local.txt
@@ -3,3 +3,4 @@ djangorestframework>=3.12.4,<3.13
 psycopg2-binary>=2.9.5,<2.10
 drf-spectacular>=0.15.1,<0.16
 drf-nested-routers>=0.93.4,<0.94
+Pillow>=8.2.0,<8.3.0
