--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,4 @@ djangorestframework>=3.12.4,<3.13
 psycopg2>=2.8.6,<2.9
 drf-spectacular>=0.15.1,<0.16
 drf-nested-routers>=0.93.4,<0.94
+Pillow>=8.2.0,<8.3.0
